fixing z-index in modals

--- a/_includes/styles/common/_structure.scss
+++ b/_includes/styles/common/_structure.scss
@@ -41,7 +41,9 @@ body {
 		}
 	}
 	
-	.wrapper-bottom { }
+	.wrapper-bottom {
+		z-index 	: 2000;
+	}
 	
 	.wrapper-left {
 		top 		: 0;
