--- a/_includes/styles/components/_basket-preview.scss
+++ b/_includes/styles/components/_basket-preview.scss
@@ -9,4 +9,10 @@
     	flex: 0 1 auto;
 	    overflow: auto;
     }
+
+    .totals{
+    	flex: 1 0 auto;
+	    display: flex;
+	    flex-flow: column nowrap;
+    }
 }
