--- a/_includes/styles/components/_component-base.scss
+++ b/_includes/styles/components/_component-base.scss
@@ -35,14 +35,15 @@
 		font-weight: 700;
 		display: inline-block;
 		position: absolute;
-		top: 150%;
+		top: 50%;
 		left: 50%;
 		z-index: $zIndex-9;
 		opacity: 0;
+		visibility: hidden;
 		transform: translate(-50%, -50%);
 
 		transition: opacity 300ms,
-					top 0ms 310ms;
+					visibility 0ms 310ms,;
 	}
 
 	&.wait{
@@ -60,10 +61,8 @@
 
 		&::after{
 			opacity: 1;
-			top: 50%;
-			transform: translate(-50%, -50%);
-
-			transition: top 0ms,
+			visibility: visible;
+			transition: visibility 0ms,
 						opacity 300ms 100ms;
 		}
 	}
